--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,30 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import { Picture } from '@astrojs/image/components';
+import Hero from '../components/Hero.astro';
 import '../styles/index.scss'
 ---
 <Layout title="Stammbrüder - Wertiges aus Holz" flexibleHeader="true" hero="true">
 
-	<section class="eichenscheibe hero">
+	<Hero image="/img/eichenscheibe.jpg">
 		<h1>Wertiges aus Holz made in Leipzig</h1>
 		<p>Wir planen gemeinsam Projekte mit dir und setzen deine Vorstellungen erst digital und dann in die Realität um.<p/>
-	</section>
+	</Hero>
 	<section id="nav">
-		<a href="/tische" class="tisch"><h2>Tische</h2></a>
-		<a href="/camperausbau" class="camper"><h2>Camperausbau</h2></a>
-		<a href="#" class="projekt"><h2>Dein Projekt</h2></a>
-		<a href="#" class="diverse"><h2>Diverses</h2></a>
+		<a href="/tische" class="tisch">
+			<Picture src="/img/tische.jpg" aspectRatio="3:2" widths={[400, 800, 1200]}/>
+			<h2>Tische</h2>
+		</a>
+		<a href="/camperausbau" class="camper">
+			<Picture src="/img/camper.jpg" aspectRatio="3:2" widths={[400, 800, 1200]}/>
+			<h2>Camperausbau</h2>
+		</a>
+		<a href="#" class="projekt">
+			<Picture src="/img/camper_nicole.png" aspectRatio="3:2" widths={[400, 800, 1200]}/>
+			<h2>Dein Projekt</h2></a>
+		<a href="#" class="diverse">
+			<Picture src="/img/brett.jpg" aspectRatio="3:2" widths={[400, 800, 1200]}/>
+			<h2>Diverses</h2></a>
 	</section>
 	<section id="team">
 
