--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,9 @@
 
 
-.eichenscheibe {
-	--img: url("/img/eichenscheibe.jpg");
-}
-
 #nav {
 	--gap: 0px;
 	display: grid;
-	grid-template-columns: repeat( auto-fit, minmax(clamp(50% - var(--gap), 350px, 100%), 1fr));
+	grid-template-columns: repeat( auto-fit, minmax(clamp(50% - var(--gap), 400px, 100%), 1fr));
 
 	a {
 		display: flex;
@@ -18,39 +14,47 @@
 		justify-content: center;
 		color: white;
 
-		background-size: cover;
-		background-position: center center;
-		background-image: var(--img);
 		transition: all 1s;
 
 		position: relative;
 		--color: rgba(16, 16, 203, 0.2);
-		filter: saturate(0.8);
 
-		&:hover {
-			filter: saturate(1.2);
+		overflow: hidden;
+
+		img {
+			position: absolute;
+			inset: 0;
+			object-fit: cover;
+			max-width: 100%;
+
+			transition: all .5s;
+		}
+
+		&:after {
+			content: '';
+			position: absolute;
+			inset: 0;
+			background: transparent;
+
+			transition: all .5s;
+
+		}
+
+		&:hover{
+			&:after {
+				background: rgba(black, 0.25);
+			}
+
+			img {
+				transform: scale(1.1);
+			}
 		}
 
 		h2 {
+			position: relative;
+			z-index: 1;
 			text-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.9);
 		}
 	}
 
-}
-
-.tisch {
-	--img: url("/img/tische.jpg");
-	--color: rgba(255, 0, 0, 0.22) !important;
-}
-
-.camper {
-	--img: url("/img/camper.jpg")
-}
-
-.diverse {
-	--img: url("/img/brett.jpg")
-}
-
-.projekt {
-	--img: url("/img/camper_nicole.png");
 }
