--- a/src/pages/camperausbau.astro
+++ b/src/pages/camperausbau.astro
@@ -2,15 +2,20 @@
 import Layout from "../layouts/Layout.astro";
 import Tile from "../components/Tile.astro";
 import Hero from '../components/Hero.astro'
+
+import planung from '../../public/img/camper_nicole.png';
+import cnc from '../../public/img/cnc.jpg';
+import video from '../../public/img/zusammenbau.mp4';
+
 ---
 <Layout title="Camperausbau - Stammbrüder" hero="true">
-	<Hero image="/img/camper_wald.jpg">
+	<Hero image="/img/camper_wald.jpg" alt="Camper im Wald">
 		<h1>Wir planen und fertigen individuelle Camper</h1>
 		<p>Eine zweite Wohnung für genau nach deinen Vorstellungen und Bedürfnissen</p>
 	</Hero>
 	<div class="wrapper">
 		<div class="tiles">
-			<Tile image="/img/camper_nicole.png">
+			<Tile image={planung} alt="CAD Konstruktion von einem Innerausbaus eines Campers">
 				<h2>Planung</h2>
 				<p>
 					Wir planen deinen Traum vom Camper gemeinsam mit dir auf den Millimeter genau am Computer.
@@ -18,17 +23,16 @@ import Hero from '../components/Hero.astro'
 					Details aus, die den Camper zu deinem Camper machen.
 				</p>
 			</Tile>
-			<Tile image="/img/cnc.jpg">
+			<Tile image={cnc} alt="CNC Fräse">
 				<h2>Fräsen der Teile</h2>
 				<p>
 					Sobald einzelne Elemente des Campers vollständig geplant sind geht es an die Produktion. Alle Bauteile werden
 					auf unserer CNC Fräse aus Plattenmaterial ausgeschnitten.
 				</p>
 			</Tile>
-			<Tile video="/img/zusammenbau.mp4">
+			<Tile video={video} alt="Schleifen eines Möbel">
 				<h2>Zusammenbauen</h2>
 				<p>
-
 				</p>
 			</Tile>
 		</div>
