--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,6 +54,8 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 				<a href="/impressum">Impressum</a>
 			</nav>
 		</footer>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-1C10VNQKVE"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 
@@ -62,11 +64,10 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 			}
 
 			gtag('js', new Date());
-			gtag('config', 'UA-36884636-15');
-			</script>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-36884636-15"></script>
-	</body>
-	</html>
+			gtag('config', 'G-1C10VNQKVE');
+		</script>
+</body>
+</html>
 
 <style is:global is:inline>
 	html.hero main {
