--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 <body>
 	<header>
 		<div class="wrapper">
-			<a id="logo-container" href="/">
+			<a id="logo-container" href="/" aria-label="Startseite">
 				<Logo color="white"/>
 			</a>
 			<nav>
