moved styles around

--- a/src/pages/camperausbau.astro
+++ b/src/pages/camperausbau.astro
@@ -8,7 +8,7 @@ import cnc from '../../public/img/cnc.jpg';
 import video from '../../public/img/zusammenbau.mp4';
 
 ---
-<Layout title="Camperausbau - Stammbrüder" hero="true">
+<Layout title="individueller Camperausbau in Leipzig- Stammbrüder" hero="true" description="individueller Camperausbau von der CAD Planung bis zur CNC Fertigung in Leipzig">
 	<Hero image="/img/camper_wald.jpg" alt="Camper im Wald">
 		<h1>Wir planen und fertigen individuelle Camper</h1>
 		<p>Eine zweite Wohnung für genau nach deinen Vorstellungen und Bedürfnissen</p>
