--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 import { Picture } from '@astrojs/image/components';
 import Hero from '../components/Hero.astro';
-import '../styles/index.scss'
 ---
-<Layout title="Stammbrüder - Wertiges aus Holz" flexibleHeader="true" hero="true">
+<Layout title="Stammbrüder - Wertiges aus Holz" flexibleHeader="true" hero="true" description="Camperausbau und Massivholztische handgefertig in Leipzig">
 
 	<Hero image="/img/eichenscheibe.jpg" alt="Couchtisch aus einer Eichenscheibe">
 		<h1>Wertiges aus Holz made in Leipzig</h1>
