--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; script-src 'self' https://www.googletagmanager.com 'unsafe-inline'; connect-src 'self' https://*.google-analytics.com">
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; script-src 'self' https://cdn.jsdelivr.net/npm/@analytics-debugger/ga4mp@latest/dist/ga4mp.umd.min.js 'unsafe-inline'; connect-src 'self' https://*.google-analytics.com">
 	<title>{title}</title>
 
 	<!-- Global Metadata -->
@@ -50,27 +50,23 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 			}
 		})
 		</script>}
-		<footer>
-			<nav>
-				<a href="/impressum">Impressum</a>
-			</nav>
-		</footer>
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-1C10VNQKVE"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
+	<footer>
+		<nav>
+			<a href="/impressum">Impressum</a>
+		</nav>
+	</footer>
+	<script is:inline src="https://cdn.jsdelivr.net/npm/@analytics-debugger/ga4mp@latest/dist/ga4mp.umd.min.js"></script>
+	<script is:inline>
+		const ga4track = window.ga4mp(["G-1C10VNQKVE"], {
+			non_personalized_ads: true,
+			debug: true
+		});
+	</script>
 
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-
-			gtag('js', new Date());
-			gtag('config', 'G-1C10VNQKVE');
-		</script>
 </body>
 </html>
 
-<style is:global is:inline>
+<style is:inline>
 	html.hero main {
 		margin: 0
 	}
