--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Logo from "../components/Logo.astro";
+import { Icon } from 'astro-icon'
 import './layout.scss'
 const { title, description, flexibleHeader = false, hero = undefined, heroImage } = Astro.props;
 ---
@@ -48,9 +49,20 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 		})
 		</script>}
 	<footer>
-		<nav>
-			<a href="/impressum">Impressum</a>
-		</nav>
+		<div class="wrapper">
+			<nav class="social">
+				<a href="https://www.instagram.com/stammbrueder/" target="_blank" referrerpolicy="no-referrer">
+					<Icon pack="lucide" name="instagram" />
+					Stammbrueder
+				</a>
+				<a href="mailto:hallo@stammbrueder.de?subject=Anfrage">
+					<Icon pack="lucide" name="mail" />
+					hallo@stammbrueder.de</a>
+			</nav>
+			<nav>
+				<a href="/impressum">Impressum</a>
+			</nav>
+		</div>
 	</footer>
 	<script is:inline src="https://cdn.jsdelivr.net/npm/@analytics-debugger/ga4mp@latest/dist/ga4mp.umd.min.js"></script>
 	<script is:inline>
