--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -1,8 +1,10 @@
-@font-face {
-	font-family: 'BoucherieBlock';
-	src: url('/font/BoucherieBlock.woff2') format('woff2'),
-	url('/font/BoucherieBlock.woff') format('woff');
-	font-display: fallback;
+
+@import "_fonts.scss";
+
+@mixin mobile() {
+	@media screen and (max-width: 800px) {
+		@content
+	}
 }
 
 html {
@@ -11,9 +13,7 @@ html {
 	font-style: normal;
 }
 
-@mixin boucherieblock() {
-	font-family: 'BoucherieBlock', sans-serif;
-}
+
 
 .wrapper {
 	max-width: 1600px;
@@ -21,7 +21,7 @@ html {
 }
 
 h1, h2, h3 {
-	@include boucherieblock
+	@include headline()
 }
 
 html {
@@ -37,6 +37,7 @@ a {
 body {
 	box-sizing: border-box;
 	margin: 0 auto;
+	@include text()
 }
 
 main {
@@ -73,7 +74,7 @@ header {
 
 
 	nav {
-		@include boucherieblock;
+		@include headline();
 		padding: 0;
 		font-size: 1.2em;
 
@@ -89,13 +90,10 @@ header {
 }
 
 footer {
-	//color: white;
-	padding: 1em;
-	padding-bottom: 3em;
-	padding-top: 3em;
+	padding: 3em 1em;
 	margin-top: 1rem;
 	background: linear-gradient(rgba(white, 0.95), rgba(white, 0.95)), url("/img/footer.png?as") no-repeat;
-	background-position-y: 0em;
+	background-position-y: 0;
 	background-size: cover;
 
 	.wrapper {
@@ -129,9 +127,15 @@ footer {
 	}
 
 	.content {
-		padding: 1em;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		padding: 2em;
 		box-sizing: border-box;
 		aspect-ratio: 1/1;
+
+		line-height: 1.5em;
+		font-size: 1.5em;
 	}
 
 	.img {
@@ -140,6 +144,7 @@ footer {
 
 	img {
 		width: 100%;
+		height: 100%;
 		object-fit: cover;
 		aspect-ratio: 1/1;
 	}
@@ -156,9 +161,8 @@ footer {
 		flex-direction: row-reverse;
 	}
 
-	@media screen and (max-device-width: 700px) {
-
-		margin: 1em;
+	@include mobile() {
+		//margin: 1em;
 
 		.tile-row {
 			display: block;
@@ -166,13 +170,13 @@ footer {
 
 		.tile {
 			width: 100%;
-			padding: 0;
 		}
 
 		.content {
 			aspect-ratio: auto;
 		}
 	}
+
 }
 
 section.hero {
