--- a/src/pages/camperausbau.astro
+++ b/src/pages/camperausbau.astro
@@ -11,11 +11,11 @@ import video from '../../public/img/zusammenbau.mp4';
 <Layout title="individueller Camperausbau in Leipzig- Stammbrüder" hero="true" description="individueller Camperausbau von der CAD Planung bis zur CNC Fertigung in Leipzig">
 	<Hero image="/img/camper_wald.jpg" alt="Camper im Wald">
 		<h1>Wir planen und fertigen individuelle Camper</h1>
-		<p>Eine zweite Wohnung für genau nach deinen Vorstellungen und Bedürfnissen</p>
+		<p>Ein zweites Zuhause genau nach deinen Vorstellungen und Bedürfnissen</p>
 	</Hero>
 	<div class="wrapper">
 		<div class="tiles">
-			<Tile image={planung} alt="CAD Konstruktion von einem Innerausbaus eines Campers">
+			<Tile image={planung} alt="CAD Konstruktion von einem Innerausbaus eines Campers" background="#cdefff">
 				<h2>Planung</h2>
 				<p>
 					Wir planen deinen Traum vom Camper gemeinsam mit dir auf den Millimeter genau am Computer.
@@ -23,16 +23,18 @@ import video from '../../public/img/zusammenbau.mp4';
 					Details aus, die den Camper zu deinem Camper machen.
 				</p>
 			</Tile>
-			<Tile image={cnc} alt="CNC Fräse">
+			<Tile image={cnc} alt="CNC Fräse" background="#8ac9e7">
 				<h2>Fräsen der Teile</h2>
 				<p>
 					Sobald einzelne Elemente des Campers vollständig geplant sind geht es an die Produktion. Alle Bauteile werden
 					auf unserer CNC Fräse aus Plattenmaterial ausgeschnitten.
 				</p>
 			</Tile>
-			<Tile video={video} alt="Schleifen eines Möbel">
+			<Tile video={video} alt="Schleifen eines Möbel" background="#cdefff">
 				<h2>Zusammenbauen</h2>
 				<p>
+					Da jedes Teil ein individuell geplantes Einzelstück ist steigt die Spannung im letzten Arbeitsschritt.
+					Hier kommen zum ersten mal alle Teile zusammen und werden dann miteinander verleimt.
 				</p>
 			</Tile>
 		</div>
