removed about us

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 				<Logo color="white"/>
 			</a>
 			<nav>
-				<a href="/das-sind-wir">Über uns</a>
+				{/*<a href="/das-sind-wir">Über uns</a>*/}
 				<a href="/camperausbau">Camperausbau</a>
 				<a href="/produkte/tische">Tische</a>
 			</nav>
