--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -13,8 +13,6 @@ html {
 	font-style: normal;
 }
 
-
-
 .wrapper {
 	max-width: 1600px;
 	margin: 0 auto;
@@ -42,6 +40,10 @@ body {
 
 main {
 	margin-top: 8rem;
+
+	a {
+		color: #3273dc;
+	}
 }
 
 header {
@@ -103,7 +105,6 @@ footer {
 	}
 
 	.social {
-
 		a {
 			margin: 1em;
 			display: inline-flex;
@@ -119,65 +120,7 @@ footer {
 
 }
 
-.tile-row {
-	display: flex;
-
-	.tile {
-		width: 50%;
-	}
-
-	.content {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		padding: 2em;
-		box-sizing: border-box;
-		aspect-ratio: 1/1;
-
-		line-height: 1.5em;
-		font-size: 1.5em;
-	}
-
-	.img {
-		position: relative;
-	}
-
-	img {
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		aspect-ratio: 1/1;
-	}
-
-	video {
-		width: 100%;
-		height: 100%;
-		object-fit: fill;
-	}
-}
-
-.tiles {
-	.tile-row:nth-child(2n) {
-		flex-direction: row-reverse;
-	}
-
-	@include mobile() {
-		//margin: 1em;
-
-		.tile-row {
-			display: block;
-		}
-
-		.tile {
-			width: 100%;
-		}
-
-		.content {
-			aspect-ratio: auto;
-		}
-	}
-
-}
+@import "_tiles.scss";
 
 section.hero {
 	min-height: 100svh;
@@ -208,10 +151,14 @@ section.hero {
 
 }
 
+
 #nav {
 	--gap: 0px;
 	display: grid;
 	grid-template-columns: repeat( auto-fit, minmax(clamp(50% - var(--gap), 400px, 100%), 1fr));
+}
+
+.tile-nav {
 
 	a {
 		display: flex;
@@ -233,7 +180,9 @@ section.hero {
 			position: absolute;
 			inset: 0;
 			object-fit: cover;
-			max-width: 100%;
+			//max-width: 100%;
+			width: 100%;
+			height: 100%;
 
 			transition: all .5s;
 		}
@@ -258,11 +207,79 @@ section.hero {
 			}
 		}
 
-		h2 {
+		h1, h2, h3 {
 			position: relative;
 			z-index: 1;
 			text-shadow: 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.9);
 		}
 	}
+}
+
+
+.projekte {
+	nav {
+		display: flex;
+		justify-items: center;
+		align-items: center;
+
+		a {
+			display: inline-flex;
+			width: calc((1600px - 12em) / 3);
+			margin: 1em;
+			overflow: hidden;
+			border-radius: .5em;
+			//border: 1px solid rgba(white, 0.5);
+			box-shadow: 2px 2px 0.2em rgba(black, 0.5 );
+			transition: all 0.5s;
+
+			&:after {
+				display: none;
+			}
+
+			&:hover {
+				box-shadow: 2px 2px .5em rgba(black, 0.5 );
+			}
+		}
+
+		@include mobile() {
+			display: block;
+
+			a {
+				width: 100%;
+				margin: 1em 0;
+			}
+		}
+
+		a:first-child {
+			margin-left: auto;
+		}
+
+		a:last-child {
+			margin-right: auto;
+		}
+	}
+}
+
+section.full {
+	margin: 0;
+	padding: 4em 2em;
+	//background: lightblue;
+
+	> h2 {
+		text-align: center;
+		font-size: 3rem;
+		margin: 1rem;
+
+		& + p {
+			text-align: center;
+		}
+	}
+
+	h3 {
+		text-align: center;
+		color: gray;
+	}
+
+
 
 }
