--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,16 @@
 import Layout from "../layouts/Layout.astro";
 import { Picture } from '@astrojs/image/components';
 import Hero from '../components/Hero.astro';
+import '../styles/index.scss'
 ---
+
 <Layout title="Stammbrüder - Wertiges aus Holz" flexibleHeader="true" hero="true" description="Camperausbau und Massivholztische handgefertig in Leipzig">
 
 	<Hero image="/img/eichenscheibe.jpg" alt="Couchtisch aus einer Eichenscheibe">
 		<h1>Wertiges aus Holz made in Leipzig</h1>
 		<p>Wir planen gemeinsam Projekte mit dir und setzen deine Vorstellungen erst digital und dann in die Realität um.<p/>
 	</Hero>
-	<section id="nav">
+	<section id="nav" class="tile-nav">
 		<a href="/tische" class="tisch">
 			<Picture src="/img/tische.jpg" aspectRatio="3:2" widths={[400, 800, 1200]} alt="Eichentisch"/>
 			<h2>Tische</h2>
@@ -18,14 +20,19 @@ import Hero from '../components/Hero.astro';
 			<Picture src="/img/camper.jpg" aspectRatio="3:2" widths={[400, 800, 1200]} alt="Camper bei Sonnenuntergang"/>
 			<h2>Camperausbau</h2>
 		</a>
+		{/*
 		<a href="#" class="projekt">
 			<Picture src="/img/camper_nicole.png" aspectRatio="3:2" widths={[400, 800, 1200]} alt="CAD Konstruktion von einem Innerausbaus eines Campers"/>
 			<h2>Dein Projekt</h2></a>
 		<a href="#" class="diverse">
 			<Picture src="/img/brett.jpg" aspectRatio="3:2" widths={[400, 800, 1200]} alt="Schneidebrett aus Eichenholz mit Brandeisen"/>
 			<h2>Diverses</h2></a>
+			*/}
 	</section>
 	<section id="team">
 
 	</section>
+
+
 </Layout>
+
