completed pages about tische

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 			<nav>
 				{/*<a href="/das-sind-wir">Über uns</a>*/}
 				<a href="/camperausbau">Camperausbau</a>
-				<a href="/produkte/tische">Tische</a>
+				<a href="/tische">Tische</a>
 			</nav>
 		</div>
 	</header>
