--- a/src/pages/camper/blue.astro
+++ b/src/pages/camper/blue.astro
@@ -16,38 +16,37 @@ import camper from '../../assets/blue/camper_wald.jpg'
 				flexibleHeader="true">
 	<Hero image={camper} alt="Camper im Wald">
 		<h1>Der praktische Camper für die ganze Familie</h1>
-		<p>Ein zweites Zuhause genau nach deinen Vorstellungen und Bedürfnissen</p>
+		<p>Ein Einblick in unser zweites Zuhause für Unterwegs</p>
 	</Hero>
 	<section class="tiles wrapper">
 		<Tile image={konstruktion} alt="CAD Konstruktion von einem Innerausbaus von Blue" className="color">
 			<h2>Anforderungen</h2>
 			<ul>
-				<li>Fünf eingetragene Sitzplätze sowie Platz zum Schlafen für alle</li>
-				<li>Viele Fächer damit Ordnung herrscht</li>
-				<li>eine vernünftige Küche mit stehhöhe zum im Camper kochen</li>
-				<li>Autak für 5 Tage, d.h. > 100l Wasser, Solarstrom und Batterien</li>
-				<li>Viel Platz für alle und weniges umbauen</li>
+				<li>fünf eingetragene Sitzplätze sowie komfortable Schlafplätze</li>
+				<li>viele Fächer mit Funktion - anstelle chaotischer Boxen</li>
+				<li>eine Küche wie zu Hause - mit Stehhöhe</li>
+				<li>autark für 5 Tage, daher min. 100l Wasser, Solarstrom und Batterien</li>
+				<li>unkompliziertes Umbauen</li>
 			</ul>
 		</Tile>
 		<Tile image={stauraum} alt="Jede Menge Fächer" className="stauraum color">
 			<h2>Stauraum</h2>
 			<p>
-				Nach einigen ausgeliehenen Vans kennt man das Problem nur zu gut. Ein vernünftiges Ablagesystem muss her sonst
-				versinkt man gleich am ersten Tag im Chaos. Wir haben in der Planung jeden Raum ausgenutzt und Fächer geplant.
+				Nach einigen ausgeliehenen Vans, kennt man das Problem nur zu gut: ohne vernünftiges Ablagesystem versinkt man
+				gleich am ersten Tag im Chaos. Wir haben in der Planung jeden Zentimeter bedacht und die Anzahl der Fächer maximiert.
 			</p>
 			<p>
-				Die Fächer links im Bild sind nur ca. 7cm tief, eignen sich aber hervorangend um Nudeln, Müsli, Öl sowie Gläser
+				Trotz der geringen Tiefe der Fächer links im Bild, eignen sich diese hervorangend um Nudeln, Müsli, Bretter sowie Gläser
 				zu verstauen.
 			</p>
 		</Tile>
 		<Tile image={bett} alt="Hubbett im Camper" className='bett color'>
-			<h2>Hubbett</h2>
+			<h2>elektrisches Bett</h2>
 			<p>
-				Bei den meisten Vans ist das Bett starr verbaut und damit einen großen Teil der Zeit im Weg. Bei fünf Leuten
-				muss wenigstens ein Bett tagsüber verschwinden. Da guter Schlafkompfort wichtig ist und auch das Umbauen des
-				Campers sich auf ein minimum beschränken soll haben wir ein <em>elektrisch, absenkenden</em> Bett konstruiert
-				und gebaut. Das Bett ist in 20s gemacht bzw. verstaut.
+				Bei den meisten Vans ist das Bett starr verbaut und damit einen großen Teil der Zeit im Weg. </p><p>Unser Bett wird auf Knopfdruck
+				elektrisch unter die Decke gezogen und gibt den Platz tagsüber frei. In 20 Sekunden ist es schlafbereit und bietet mit einer 140x200cm Matraze jede Menge Komfort.
 			</p>
+
 		</Tile>
 		<Tile image={platform} alt="Eine Platform zum liegen und sitzen" className="color">
 			<h2>Ausziehplatform mit Klapptisch</h2>
