--- a/src/pages/tische.astro
+++ b/src/pages/tische.astro
@@ -18,11 +18,11 @@ import schweissen from '../assets/tische/schweissen.jpg';
 flexibleHeader="true">
 	<Hero image={eichentisch} alt="gedeckter Ahorntisch in Loft">
 		<h1>Wir planen und fertigen Massivholztische nach Maß</h1>
-		<p>handgefertigt von der Tischplatte bis zum Gestell</p>
+		<p>Handgefertigt von der Tischplatte bis zum Gestell.</p>
 	</Hero>
 	<section class="full projekte">
 		<h2>Massivholztische</h2>
-		<h3>eine Auswahl an Tischen gefertigt in unserer Werkstatt in Leipzig</h3>
+		<h3>Eine Auswahl an Tischen, gefertigt in unserer Werkstatt in Leipzig.</h3>
 		<nav class="wrapper tile-nav">
 			<a href="#">
 				<h2>Eichenscheibe</h2>
@@ -42,32 +42,35 @@ flexibleHeader="true">
 		<Tile image={planung} alt="CAD Konstruktion von einem Tisch" className="color">
 			<h2>Planung</h2>
 			<p>
-				Wir fertigen Massivholztische für die Ewigkeit. Die Auswahl des richtigen Holzes spielt dabei ebendso eine Rolle
-				wie die Estätik des Untergestells.
+				Wir fertigen Massivholztische für die Ewigkeit. Die Auswahl des richtigen Holzes spielt dabei ebenso eine Rolle
+				wie die Ästhetik des Untergestells.
 			</p>
 			<p>
-				Wir planen den Tisch im CAD Programm, sodass du vorab einen guten Eindruck von deinem Möbelstück bekommst.
+				Wir planen jeden Tisch vorab im CAD Programm. So haben wir vorab bereits einen guten Eindruck von dem Möbelstück.
 			</p>
 		</Tile>
 		<Tile image={cnc} alt="Eichenscheibe wird überfräst" className="color bottom">
 			<h2>Fräsen</h2>
 			<p>
-				Wir arbeiten unkonventionell und verarbeiten sehr breites Holz mit der CNC Fräse, da dies für normale Abrichten und
+				Wir arbeiten <em>unkonventionell</em> und verarbeiten sehr breites Holz mit der CNC Fräse, da dies für normale Abrichten und
 				Dicktenhobel zu groß ist.
 			</p>
-			<p>Die Fräse ermöglich außerdem Schwalbenschwänze und andere Formen einfach einzulassen.</p>
+			<p>Die Fräse ermöglicht außerdem Schwalbenschwänze und andere Formen einfach einzulassen.</p>
 		</Tile>
 		<Tile image={schweissen} alt="Schweissen des Gestells" className="color top">
-			<h2>Schweißen</h2>
+			<h2>Schweißen & Lackieren</h2>
 			<p>
-				Die Untergestelle stimmen wir individuell ab und fertigen diese zu großen Teilen selbst.
+				Die Untergestelle und Rahmen fertigen wir zu großen Teilen selbst und können so auf Kundenwünsche indivudell eingehen.
+			</p>
+			<p>
+				Das Gestell lackieren wir entweder selbst oder lassen es extern pulverbeschichten.
 			</p>
 		</Tile>
 		<Tile video={video} alt="Schleifen eines Möbel" className="color video">
-			<h2>Schleifen und Ölen</h2>
+			<h2>Schleifen & Ölen</h2>
 			<p>
 				Im letzten Schritt schleifen wir den Tisch fein und tragen mehrfach Hartwachsöl auf. Die Oberfläche ist
-				geschützt und bewahrt zu gleich die einzigartige Holzstruktur.
+				geschützt und bewahrt zugleich ihre einzigartige Holzstruktur.
 			</p>
 		</Tile>
 	</section>
