--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; script-src 'self' https://cdn.jsdelivr.net/npm/@analytics-debugger/ga4mp@latest/dist/ga4mp.umd.min.js 'unsafe-inline'; connect-src 'self' https://*.google-analytics.com">
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; script-src 'self' https://www.googletagmanager.com 'unsafe-inline'; connect-src 'self' https://*.google-analytics.com; img-src 'self' https://www.googletagmanager.com">
 	<title>{title}</title>
 
 	<!-- Global Metadata -->
@@ -64,13 +64,17 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 			</nav>
 		</div>
 	</footer>
-	<script is:inline src="https://cdn.jsdelivr.net/npm/@analytics-debugger/ga4mp@latest/dist/ga4mp.umd.min.js"></script>
-	<script is:inline>
-		const ga4track = window.ga4mp(["G-1C10VNQKVE"], {
-			non_personalized_ads: true,
-			debug: true
-		});
-	</script>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-1C10VNQKVE"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+
+			gtag('js', new Date());
+			gtag('config', 'G-1C10VNQKVE');
+			</script>
 
 </body>
 </html>
