--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; script-src 'self' https://www.googletagmanager.com 'unsafe-inline'; connect-src 'self' https://*.google-analytics.com; img-src 'self' https://www.googletagmanager.com">
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://matomo.dev.marcuskrejpowicz.com/matomo.js; connect-src 'self' https://matomo.dev.marcuskrejpowicz.com/; img-src 'self'; style-src 'self' 'unsafe-inline'">
 	<title>{title}</title>
 
 	<!-- Global Metadata -->
@@ -64,18 +64,24 @@ const { title, description, flexibleHeader = false, hero = undefined, heroImage 
 			</nav>
 		</div>
 	</footer>
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-1C10VNQKVE"></script>
+		<!-- Matomo -->
 		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-
-			gtag('js', new Date());
-			gtag('config', 'G-1C10VNQKVE');
+			var _paq = window._paq = window._paq || [];
+			/* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+			_paq.push(["setDoNotTrack", true]);
+			_paq.push(["disableCookies"]);
+			_paq.push(['trackPageView']);
+			_paq.push(['enableLinkTracking']);
+			(function() {
+				var u="https://matomo.dev.marcuskrejpowicz.com/";
+				_paq.push(['setTrackerUrl', u+'matomo.php']);
+				_paq.push(['setSiteId', '2']);
+				var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+				g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+			})();
 			</script>
-
+		<noscript><p><img src="//matomo.dev.marcuskrejpowicz.com/matomo.php?idsite=2&amp;rec=1" style="border:0;" alt="" /></p></noscript>
+		<!-- End Matomo Code -->
 </body>
 </html>
 
