point all links to camper/blue

--- a/src/pages/camperausbau.astro
+++ b/src/pages/camperausbau.astro
@@ -27,11 +27,11 @@ flexibleHeader="true">
 				<h2>Blue</h2>
 				<Picture src={blue} alt="Unser Camper mit dem Namen 'blue'" widths={[200, 400]} />
 			</a>
-			<a href="#">
+			<a href="/camper/blue">
 				<h2>Boxi</h2>
 				<Picture src={boxi} alt="ausgebauter Peugeot Boxer" widths={[200, 400]} />
 			</a>
-			<a href="#">
+			<a href="/camper/blue">
 				<h2>Bulli</h2>
 				<Picture src={bulli} alt="T4 Bulli" widths={[200, 400]} />
 			</a>
