--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,8 +16,10 @@ import tony from '../assets/team/tony.jpg';
 
 	<Hero image={eichenscheibe} alt="Couchtisch aus einer Eichenscheibe">
 		<h1>Wertiges aus Holz - made in Leipzig</h1>
-		<p>Wir planen gemeinsam Projekte und setzen deine Vorstellungen erst digital und dann in die Realität um.
-		<p/>
+		<h2>Wir planen gemeinsam Projekte und setzen deine Vorstellungen erst digital und dann in die Realität um.</h2>
+		<div class="ctas">
+			<a class="btn" href="mailto:hallo@stammbrueder.de">Projekt anfragen</a>
+		</div>
 	</Hero>
 	<section id="nav" class="tile-nav">
 		<a href="/tische" class="tisch">
