--- a/src/pages/tische.astro
+++ b/src/pages/tische.astro
@@ -22,7 +22,10 @@ let images = (await Astro.glob('../assets/gallery/tische/*.jpeg')).map(x => x.de
 				flexibleHeader="true">
 	<Hero image={eichentisch} alt="gedeckter Ahorntisch in Loft">
 		<h1>Wir planen und fertigen Massivholztische nach Maß</h1>
-		<p>Handgefertigt von der Tischplatte bis zum Gestell.</p>
+		<h2>Handgefertigt von der Tischplatte bis zum Gestell.</h2>
+		<div class="ctas">
+			<a class="btn" href="mailto:halloe@stammbrueder.de?subject=Tische">Indivuellen Tisch anfragen</a>
+		</div>
 	</Hero>
 	<section class="full projekte">
 		<h2>Massivholztische</h2>
