--- a/src/pages/camper/blue.astro
+++ b/src/pages/camper/blue.astro
@@ -16,7 +16,10 @@ import camper from '../../assets/blue/camper_wald.jpg'
 				flexibleHeader="true">
 	<Hero image={camper} alt="Camper im Wald">
 		<h1>Der praktische Camper für die ganze Familie</h1>
-		<p>Ein Einblick in unser zweites Zuhause für Unterwegs</p>
+		<h2>Ein Einblick in unser zweites Zuhause für Unterwegs</h2>
+		<div class="ctas">
+			<a class="btn" href="mailto:halloe@stammbrueder.de?subject=Blue ausleihen">Camper ausleihen</a>
+		</div>
 	</Hero>
 	<section class="tiles wrapper">
 		<Tile image={konstruktion} alt="CAD Konstruktion von einem Innerausbaus von Blue" className="color">
