--- a/src/pages/camperausbau.astro
+++ b/src/pages/camperausbau.astro
@@ -17,7 +17,10 @@ import camper from '../assets/blue/camper_wald.jpg'
 flexibleHeader="true">
 	<Hero image={camper} alt="Camper im Wald">
 		<h1>Wir planen und fertigen individuelle Camper</h1>
-		<p>Ein zweites Zuhause genau nach deinen Vorstellungen und Bedürfnissen.</p>
+		<h2>Ein zweites Zuhause genau nach deinen Vorstellungen und Bedürfnissen.</h2>
+		<div class="ctas">
+			<a class="btn" href="mailto:halloe@stammbrueder.de?subject=Camperausbau">Gemeinsam ausbauen</a>
+		</div>
 	</Hero>
 	<section class="full projekte">
 		<h2>Camperausbauten</h2>
